--- a/style.css
+++ b/style.css
@@ -27,4 +27,50 @@
                .caixa{position: relative;
                       width: 940px;
                       margin:0 auto;}
-                    
+                         .produtos{
+               width: 940px;
+               margin: 0 auto;
+               padding: 50px 0;
+        }
+        
+        
+          .produtos li{
+            display: inline-block;
+            text-align: center;
+            width: 27%;
+            vertical-align: top;
+            margin: 0 1.5%;
+            padding: 30px 20px;
+            box-sizing: border-box;
+            border: 2px solid black;
+            border-radius: 10px;
+        }
+        .produtos li:hover {
+             border-color: goldenrod;
+        
+        }
+         
+          .produtos li:active {
+              border-color: goldenrod;
+        
+          }
+        
+          .produtos li:hover h2{
+                font-size: 40px ;
+        
+          }
+        
+        
+        
+        
+        
+        
+          .produtos h2{
+            font-size: 27px;
+            font-weight: bold;
+        }
+        
+         .descrição{
+              font-size: 18px;
+            
+        }
