--- a/style.css
+++ b/style.css
@@ -74,3 +74,16 @@
               font-size: 18px;
             
         }
+     .preço{
+            font-size: 22px;
+            font-weight: bold;
+        }
+        
+          .foto{width: 100%;}
+
+                
+            footer {
+              text-align: center;
+              background: url("bg.jpg");
+              padding: 40px 0;
+            }
